--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="row">
           <div class="col-lg-12">
             <img class="hero-img" src="assets/images/hero/LandingImage-2025-03-26-14-03-54.jpg" alt="hero-image" />
-            <img class="hero-img-phn" src="assets/images/hero/hero-image-phn.svg" />
+            <img class="hero-img-phn" src="assets/images/hero/landing_page_mobile.png" />
           </div>
         </div>
       </div>
