--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <!-- Open Graph / Facebook -->
     <meta
       property="og:title"
-      content="NoHaasle | Your Rituals our Responsibility"
+      content="Vandan | Your Rituals our Responsibility"
     />
     <meta
       property="og:description"
-      content="NoHaasle | Your Rituals our Responsibility"
+      content="Vandan | Your Rituals our Responsibility"
     />
     <meta
       property="og:image"
