--- a/header.html
+++ b/header.html
@@ -96,7 +96,7 @@
                   </li>
 
                   <li class="nav-item">
-                    <a class="ud-submenu-link" href="#faq">Pooja Services</a>
+                    <a class="ud-submenu-link" href="pooja_services.html">Our Services</a>
                   </li>
                   <li class="nav-item">
                     <a class="ud-submenu-link" href="#">Book Pandit</a>
@@ -104,9 +104,9 @@
                   <li class="nav-item">
                     <a class="ud-submenu-link" href="#">About Us</a>
                   </li>
-                  <li class="nav-item">
+                  <!-- <li class="nav-item">
                     <a class="ud-menu-scroll" href="#contact">Contact Us</a>
-                  </li>
+                  </li> -->
                  
                 </ul>
               </div>
