--- a/footer.html
+++ b/footer.html
@@ -86,7 +86,7 @@
           </div>
           <div class="col-md-4 text-center">
             <h5 class="footer-title">Quick Links</h5>
-            <p><a href="#">Home</a> | <a href="#">About</a> | <a href="#">Pooja List</a></p>
+            <p><a href="index.html">Home</a> | <a href="about_us.html">About</a> | <a href="pooja_services.html">Pooja List</a></p>
           </div>
         </div>
        
