--- a/pooja_services.html
+++ b/pooja_services.html
@@ -162,6 +162,15 @@
             document.getElementById('footer').innerHTML = data;
           });
       </script>
+          <script>
+            document.addEventListener('scroll', function () {
+              const nav = document.querySelector('.navbar-collapse');
+              const bsCollapse = bootstrap.Collapse.getInstance(nav);
+              if (nav.classList.contains('show')) {
+                bsCollapse.hide();
+              }
+            });
+          </script>
     <!-- ====== Footer End ====== -->
     <a href="https://wa.me/918104030300" class="whatsapp-float" target="_blank">
       <i class="lni lni-whatsapp"></i>
