upnayan pooja added

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </div>
           <div class="pooja-item">
             <a href="satyanarayan-pooja.html">
-              <img src="assets/images/pricing/Satyanarayan.jpeg" alt="Satyanarayan Pooja">
+              <img src="assets/images/pricing/Satyanarayan.jpg" alt="Satyanarayan Pooja">
               <p style=" color: #9b5722;">Satyanarayan Pooja</p>
             </a>
           </div>
