pooja services added

--- a/pooja_services.html
+++ b/pooja_services.html
@@ -94,13 +94,13 @@
           </a>
         </div>
         <div class="pooja-item">
-          <a href="udak-shanti.html">
+          <a href="Office_opening_pooja.html">
             <img src="assets/images/pricing/office_opening_image.jpeg" alt="office_opening_image">
             <p style=" color: #9b5722;">Office Opening Pooja</p>
           </a>
         </div>
         <div class="pooja-item">
-          <a href="satyanarayan-pooja.html">
+          <a href="Satyanarayan_pooja.html">
             <img src="assets/images/pricing/Satyanarayan.jpg" alt="Satyanarayan Pooja">
             <p style=" color: #9b5722;">Satyanarayan Pooja</p>
           </a>
