--- a/pooja_services.html
+++ b/pooja_services.html
@@ -106,37 +106,37 @@
           </a>
         </div>
         <div class="pooja-item">
-          <a href="diwali-pooja.html">
+          <a href="Navchandi.html">
             <img src="assets/images/pricing/vastupooja.jpg" alt="Navchandi Pooja">
             <p style=" color: #9b5722;">Navchandi Pooja</p>
           </a>
         </div>
         <div class="pooja-item">
-          <a href="pitru-pooja.html">
+          <a href="Bhoomi_poojan.html">
             <img src="assets/images/pricing/bhumipoojn.jpeg" alt="Bhumi Pooja">
             <p style=" color: #9b5722;">Bhoomi Poojan</p>
           </a>
         </div>
         <div class="pooja-item">
-          <a href="pitru-pooja.html">
+          <a href="UdakShanti.html">
             <img src="assets/images/pricing/udakshanti.jpeg" alt="udak-shanti">
             <p style=" color: #9b5722;">Udak Shanti</p>
           </a>
         </div>
         <div class="pooja-item">
-          <a href="pitru-pooja.html">
+          <a href="Annaprashan_pooja.html">
             <img src="assets/images/pricing/Annaprashan.webp" alt="Annaprashan">
             <p style=" color: #9b5722;">Annaprashan Pooja</p>
           </a>
         </div>
         <div class="pooja-item">
-          <a href="pitru-pooja.html">
+          <a href="Griha_pravesh_pooja.html">
             <img src="assets/images/pricing/grihpravesh.jpeg" alt="griha Pravesh">
             <p style=" color: #9b5722;">Griha Pravesh Pooja</p>
           </a>
         </div>
         <div class="pooja-item">
-          <a href="pitru-pooja.html">
+          <a href="Vastu_shanti.html">
             <img src="assets/images/pricing/navchandi.jpeg" alt="vastupooja">
             <p style=" color: #9b5722;">Vastu Shanti Pooja</p>
           </a>
