--- a/footer.html
+++ b/footer.html
@@ -71,10 +71,10 @@
         <div class="footer-top text-center">
           <h2 class="brand-name">Vandan Holy Services Private Limited</h2>
           
-          <p class="footer-mantra">"शुभं भवतु" – May everything be auspicious 🙏</p>
+          <p class="footer-mantra">पूर्ण नाही तर अर्थपूर्ण पूजा !</p>
         </div>
     
-        <div class="footer-middle row justify-content-center">
+        <div class="footer-middle row justify-content-center" style="margin-top: 5px;">
           <div class="col-md-4 text-center">
             <h5 class="footer-title">Contact</h5>
             <p>📞 +91 8104030300</p>
