--- a/Upanayan_Sanskar.html
+++ b/Upanayan_Sanskar.html
@@ -339,7 +339,7 @@
         });
       </script>
       
-      <script>
+      <!-- <script>
         document.addEventListener('scroll', function () {
           const nav = document.querySelector('.navbar-collapse');
           const bsCollapse = bootstrap.Collapse.getInstance(nav);
@@ -347,6 +347,6 @@
             bsCollapse.hide();
           }
         });
-      </script>
+      </script> -->
 </body>
 </html>
