all changes done

--- a/about_us.html
+++ b/about_us.html
@@ -85,7 +85,7 @@
                   <br><br>
                   At <strong>Vandan</strong>, we believe that faith deserves flawless execution. That’s why we’re building a network of verified Panditjis, customizable puja packages, and a seamless booking experience—so you can focus on your devotion while we take care of the rest.
                   <br><br>
-                  <em style="color: #b01111;"><strong>Vandan – Where Tradition Meets Trust.</strong></em>
+                  <em style="color: #b01111;"><strong>Vandan – Where Tradition Meets Technology.</strong></em>
                 </p>
               </div>
             </div>
