--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
       <div>
         <div class="row">
           <div class="col-lg-12">
-            <img class="hero-img" src="assets/images/hero/LandingImage-2025-03-26-14-03-54.jpg" alt="hero-image" />
-            <img class="hero-img-phn" src="assets/images/hero/landing_page_mobile.png" />
+            <img class="hero-img" src="assets/images/vandan_banner/banner_img.jpeg" alt="hero-image" />
+            <img class="hero-img-phn" src="assets/images/vandan_banner/mobile_hero.jpg" />
           </div>
         </div>
       </div>
