--- a/index.html
+++ b/index.html
@@ -72,15 +72,11 @@
    
     <!-- ====== Hero Start ====== -->
     <section class="ud-hero" id="home">
-      <div>
-        <div class="row">
-          <div class="col-lg-12">
-            <img class="hero-img" src="assets/images/vandan_banner/banner_img.jpeg" alt="hero-image" />
-            <img class="hero-img-phn" src="assets/images/vandan_banner/mobile_hero.jpg" />
-          </div>
-        </div>
+      <div class="container-fluid p-0">
+        <img class="hero-img w-100" src="assets/images/vandan_banner/banner_img.jpeg" alt="hero-image" />
       </div>
     </section>
+
     <!-- ====== Hero End ====== -->
 
     <!-- ====== How it works Start ====== -->
