--- a/index.html
+++ b/index.html
@@ -72,11 +72,15 @@
    
     <!-- ====== Hero Start ====== -->
     <section class="ud-hero" id="home">
-      <div class="container-fluid p-0">
-        <img class="hero-img w-100" src="assets/images/vandan_banner/banner_img.jpeg" alt="hero-image" />
+      <div>
+        <div class="row">
+          <div class="col-lg-12">
+            <img class="hero-img" src="assets/images/vandan_banner/banner_img.jpeg" alt="hero-image" />
+            <img class="hero-img-phn" src="assets/images/vandan_banner/vandan_landing_phone.png" />
+          </div>
+        </div>
       </div>
     </section>
-
     <!-- ====== Hero End ====== -->
 
     <!-- ====== How it works Start ====== -->
