--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="row">
           <div class="col-lg-12">
             <img class="hero-img" src="assets/images/vandan_banner/banner_img.jpeg" alt="hero-image" />
-            <img class="hero-img-phn" src="assets/images/vandan_banner/vandan_landing_phone.png" />
+            <img class="hero-img-phn" src="assets/images/vandan_banner/vandan-banner_mobile.jpeg" />
           </div>
         </div>
       </div>
