--- a/footer.html
+++ b/footer.html
@@ -77,8 +77,14 @@
         <div class="footer-middle row justify-content-center" style="margin-top: 5px;">
           <div class="col-md-4 text-center">
             <h5 class="footer-title">Contact</h5>
-            <p>📞 +91 8104030300</p>
-            <p>📍 Maharashtra</p>
+            <p>
+              📞 <a href="tel:+918104030300" style="color: inherit; text-decoration: none;">+91 8104030300</a>
+            </p>
+            
+            <p>
+              📍 <a href="https://www.google.com/maps/search/Maharashtra" target="_blank" style="color: inherit; text-decoration: none;">Maharashtra</a>
+            </p>
+            
           </div>
           <div class="col-md-4 text-center">
             <h5 class="footer-title">Follow Us</h5>
