--- a/header.html
+++ b/header.html
@@ -152,6 +152,7 @@
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="pooja_services.html">Pooja Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="book_pandit.html">Book a Pandit</a></li>
         <li class="nav-item"><a class="nav-link" href="about_us.html">About Us</a></li>
         <!-- add any other links here -->
       </ul>
@@ -169,36 +170,6 @@
   <i class="lni lni-whatsapp"> Book Pandit</i>
 </a>
 
-<script>
-  // Show/hide button based on scroll
-  const backToTopButton = document.querySelector('.back-to-top');
-
-  window.addEventListener('scroll', () => {
-    if (window.scrollY > 300) {
-      backToTopButton.style.display = 'flex';
-    } else {
-      backToTopButton.style.display = 'none';
-    }
-  });
-
-  // Scroll to top when clicked
-  backToTopButton.addEventListener('click', () => {
-    window.scrollTo({
-      top: 0,
-      behavior: 'smooth'
-    });
-  });
-</script>
-<script>
-  window.addEventListener('scroll', function() {
-    var tooltip = document.getElementById('whatsappTooltip');
-    if (window.scrollY > 150) {
-      tooltip.classList.add('show');
-    } else {
-      tooltip.classList.remove('show');
-    }
-  });
-</script>
 
 </body>
 </html>
