all changes done

--- a/Satyanarayan_pooja.html
+++ b/Satyanarayan_pooja.html
@@ -262,6 +262,10 @@
           });
       </script>
     <!-- ====== Footer End ====== -->
+
+    <a href="https://wa.me/918104030300" class="whatsapp-tooltip" id="whatsappTooltip"target="_blank">
+      <i class="lni lni-whatsapp"> Book Pandit</i>
+    </a>
     <a href="javascript:void(0)" class="back-to-top">
       <i class="lni lni-chevron-up"> </i>
     </a>
