--- a/Thank_you.html
+++ b/Thank_you.html
@@ -75,17 +75,9 @@
           <div class="row justify-content-center">
             <div class="col-lg-8">
               <div class="text-center" style="background: #ffffff; padding: 40px 30px; border-radius: 16px; box-shadow: 0 4px 20px rgba(0,0,0,0.05);">
-                <h2 style="color: #b01111; font-weight: bold; font-size: 2.5rem; margin-bottom: 20px;">About Us</h2>
-                <p style="color: #4b2e19; font-size: 1.1rem; line-height: 1.8;">
-                  <strong>Vandan</strong> is a heartfelt initiative born out of tradition, trust, and technology. We are on a mission to simplify the process of finding experienced and reliable Panditjis for all kinds of religious ceremonies.
-                  <br><br>
-                  This unique platform has been co-founded by a highly respected Panditji from the holy city of Nashik, who brings with him over 20 years of rich experience in performing Vedic rituals and guiding countless families across Maharashtra and beyond.
-                  <br><br>
-                  Joining hands with him are two young and dynamic Chartered Accountants, who bring modern thinking, efficient processes, and a vision to bridge tradition with technology.
-                  <br><br>
-                  At <strong>Vandan</strong>, we believe that faith deserves flawless execution. That’s why we’re building a network of verified Panditjis, customizable puja packages, and a seamless booking experience—so you can focus on your devotion while we take care of the rest.
-                  <br><br>
-                  <em style="color: #b01111;"><strong>Vandan – Where Tradition Meets Technology.</strong></em>
+                <h2 style="color: #b01111; font-weight: bold; font-size: 2.5rem; margin-bottom: 20px;">Thank You for Contacting Us</h2>
+                <p style="font-size: 1.1rem; color: #333;">
+                  Our team has received your request and will get in touch with you shortly.
                 </p>
               </div>
             </div>
