--- a/header.html
+++ b/header.html
@@ -87,7 +87,9 @@
     .ud-header .navbar-nav .nav-link:hover,
     .ud-header .navbar-nav .nav-link:focus {
       color: #e99657 !important;
+      color: #ce6029
     }
+
     .blinking-tagline {
       background-color: #b85b27;
       color: #ffffff;
@@ -111,9 +113,10 @@
   </head>
   <body>
     <!-- ====== Header Start ====== -->
+
     <div class="blinking-tagline text-center">
       <strong>Call or WhatsApp Now..To Book Your Pandit <i class="lni lni-phone"></i> 8104030300!</strong>
-    </div>   
+    </div> 
   <header class="ud-header">
   <nav class="navbar navbar-expand-lg bg-white">
     <div class="container-fluid">
@@ -152,7 +155,6 @@
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="pooja_services.html">Pooja Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="book_pandit.html">Book a Pandit</a></li>
         <li class="nav-item"><a class="nav-link" href="about_us.html">About Us</a></li>
         <!-- add any other links here -->
       </ul>
@@ -162,14 +164,6 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 
-<!-- <a href="javascript:void(0)" class="back-to-top">
-  <i class="lni lni-chevron-up"> </i>
-</a> -->
-
-<a href="https://wa.me/918104030300" class="whatsapp-tooltip" id="whatsappTooltip"target="_blank">
-  <i class="lni lni-whatsapp"> Book Pandit</i>
-</a>
-
-
+    
 </body>
 </html>
