--- a/Office_opening_pooja.html
+++ b/Office_opening_pooja.html
@@ -271,10 +271,12 @@
         document.getElementById('footer').innerHTML = data;
       });
   </script>
-  
-  <a href="javascript:void(0)" class="back-to-top">
-    <i class="lni lni-chevron-up"> </i>
-  </a>
+    <a href="https://wa.me/918104030300" class="whatsapp-tooltip" id="whatsappTooltip"target="_blank">
+      <i class="lni lni-whatsapp"> Book Pandit</i>
+    </a>
+    <a href="javascript:void(0)" class="back-to-top">
+      <i class="lni lni-chevron-up"> </i>
+    </a>
       
       <script>
         // Show/hide button based on scroll
