--- a/Upanayan_Sanskar.html
+++ b/Upanayan_Sanskar.html
@@ -301,6 +301,10 @@
             document.getElementById('footer').innerHTML = data;
           });
       </script>
+
+    <a href="https://wa.me/918104030300" class="whatsapp-tooltip" id="whatsappTooltip"target="_blank">
+      <i class="lni lni-whatsapp"> Book Pandit</i>
+    </a>
     <a href="javascript:void(0)" class="back-to-top">
       <i class="lni lni-chevron-up"> </i>
     </a>
