--- a/index.html
+++ b/index.html
@@ -310,8 +310,9 @@
 
 
 <!-- Book Pandit Tooltip -->
-<!--  
-<div class="whatsapp-tooltip" id="whatsappTooltip">💬 Book Pandit</div> -->
+<a href="https://wa.me/918104030300" class="whatsapp-tooltip" id="whatsappTooltip"target="_blank">
+  <i class="lni lni-whatsapp"> Book Pandit</i>
+</a>
 <a href="javascript:void(0)" class="back-to-top">
   <i class="lni lni-chevron-up"> </i>
 </a>
