--- a/header.html
+++ b/header.html
@@ -155,6 +155,7 @@
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="pooja_services.html">Pooja Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="book_pandit.html">Book a Pandit</a></li>
         <li class="nav-item"><a class="nav-link" href="about_us.html">About Us</a></li>
         <!-- add any other links here -->
       </ul>
