--- a/footer.html
+++ b/footer.html
@@ -71,7 +71,7 @@
         <div class="footer-top text-center">
           <h2 class="brand-name">Vandan Holy Services Private Limited</h2>
           
-          <p class="footer-mantra">पूर्ण नाही तर अर्थपूर्ण पूजा !</p>
+          <p class="footer-mantra">पूर्ण नाही तर अर्थपूर्ण पुजा !</p>
         </div>
     
         <div class="footer-middle row justify-content-center" style="margin-top: 5px;">
